// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders with defaultProps 1`] = `
<img
  className="ax-image ax-space--small"
  onError={[Function]}
  src="/image.png"
/>
`;

exports[`Image renders with extra props 1`] = `
<img
  alt="Lorem"
  className="ax-image ax-space--small"
  onError={[Function]}
  src="/image.png"
  title="Lorem"
/>
`;
